--- a/qr/index.html
+++ b/qr/index.html
@@ -84,7 +84,7 @@
 
     <model-viewer
       id="mv"
-      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+      src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
       ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
       ar
       ar-modes="quick-look scene-viewer webxr"
