--- a/index.html
+++ b/index.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>WebAR Test</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>AR Test</title>
 
-  <!-- model-viewer -->
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+<!-- model-viewer を読み込む -->
+<script type="module"
+  src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-  <style>
-    body {
-      margin: 0;
-      background: #000;
-    }
-    model-viewer {
-      width: 100vw;
-      height: 100vh;
-    }
-  </style>
 </head>
-
 <body>
 
-  <model-viewer
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    ar
-    ar-modes="scene-viewer quick-look"
-    camera-controls
-    autoplay
-    alt="Astronaut">
-  </model-viewer>
+<model-viewer
+  src="dance.glb"
+  ios-src="dance.usdz"
+  ar
+  ar-modes="webxr scene-viewer quick-look"
+  camera-controls
+  auto-rotate
+  alt="3D Model AR"
+  style="width:100%; height:100vh;">
+</model-viewer>
 
 </body>
 </html>
