--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>AR Test</title>
+  <meta charset="UTF-8">
+  <title>AR Viewer</title>
 
-<!-- model-viewer を読み込む -->
-<script type="module"
-  src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
 </head>
-<body>
+<body style="margin:0;">
 
 <model-viewer
-  src="dance.glb"
-  ios-src="dance.usdz"
+  src="./dance.glb"
   ar
-  ar-modes="webxr scene-viewer quick-look"
+  ar-modes="scene-viewer webxr"
   camera-controls
-  auto-rotate
-  alt="3D Model AR"
+  autoplay
   style="width:100%; height:100vh;">
 </model-viewer>
 
