--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>AR Viewer</title>
-
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
-</head>
-<body style="margin:0;">
-
 <model-viewer
   src="./dance.glb"
   ar
-  ar-modes="scene-viewer webxr"
+  ar-modes="scene-viewer"
   camera-controls
-  autoplay
   style="width:100%; height:100vh;">
 </model-viewer>
-
-</body>
-</html>
