--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>AR Test</title>
+
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
+</head>
+<body style="margin:0;">
+
 <model-viewer
   src="./dance.glb"
   ar
@@ -8,3 +20,6 @@
   scale="100 100 100"
   style="width:100%; height:100vh;">
 </model-viewer>
+
+</body>
+</html>
