--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>AR Test</title>
-
+  <title>AR Force Test</title>
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
@@ -17,8 +16,10 @@
   camera-controls
   ar-placement="floor"
   ar-scale="fixed"
-  scale="100 100 100"
-  style="width:100%; height:100vh;">
+  scale="1000 1000 1000"
+  min-camera-orbit="auto auto 0.01m"
+  max-camera-orbit="auto auto 100m"
+  style="width:100%; height:100vh; background:#fff;">
 </model-viewer>
 
 </body>
