--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>AR Force Test</title>
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
-</head>
-<body style="margin:0;">
-
 <model-viewer
   src="./dance.glb"
   ar
@@ -16,11 +5,5 @@
   camera-controls
   ar-placement="floor"
   ar-scale="fixed"
-  scale="1000 1000 1000"
-  min-camera-orbit="auto auto 0.01m"
-  max-camera-orbit="auto auto 100m"
-  style="width:100%; height:100vh; background:#fff;">
+  style="width:100%; height:100vh;">
 </model-viewer>
-
-</body>
-</html>
