--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>model-viewer AR sample</title>
+
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
+</head>
+<body style="margin:0;">
+
 <model-viewer
-  src="./dance1.glb"
+  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
   ar
-  ar-modes="scene-viewer"
+  ar-modes="scene-viewer webxr"
   camera-controls
   ar-placement="floor"
-  ar-scale="fixed"
   style="width:100%; height:100vh;">
 </model-viewer>
+
+</body>
+</html>
