--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>model-viewer AR sample</title>
+  <head>
+    <meta charset="utf-8">
+    <script type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
-</head>
-<body style="margin:0;">
-
-<model-viewer
-  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-  ar
-  ar-modes="scene-viewer webxr"
-  camera-controls
-  ar-placement="floor"
-  style="width:100%; height:100vh;">
-</model-viewer>
-
-</body>
+  <body style="margin:0">
+    <model-viewer
+      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+      ar
+      ar-modes="scene-viewer"
+      camera-controls
+      style="width:100vw; height:100vh;">
+    </model-viewer>
+  </body>
 </html>
