--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
 
   <body style="margin:0">
-    <model-viewer
-      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-      ar
-      ar-modes="scene-viewer"
-      camera-controls
-      style="width:100vw; height:100vh;">
-    </model-viewer>
+  <model-viewer
+  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+  ar
+  ar-modes="scene-viewer"
+  camera-controls
+  reveal="interaction"
+  style="width:100vw; height:100vh;">
+</model-viewer>
+
   </body>
 </html>
