--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <script type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-    </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body style="margin:0">
+  <!-- model-viewer 本体 -->
+  <script type="module"
+    src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
+</head>
+
+<body style="margin:0; background:#000;">
   <model-viewer
-  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-  ar
-  ar-modes="scene-viewer"
-  camera-controls
-  reveal="interaction"
-  style="width:100vw; height:100vh;">
-</model-viewer>
-
-  </body>
+    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    ar
+    ar-modes="scene-viewer"
+    camera-controls
+    auto-rotate
+    shadow-intensity="1"
+    style="width:100vw; height:100vh;">
+  </model-viewer>
+</body>
 </html>
