--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- model-viewer 本体 -->
-  <script type="module"
-    src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
-</head>
-
-<body style="margin:0; background:#000;">
-  <model-viewer
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    ar
-    ar-modes="scene-viewer"
-    camera-controls
-    auto-rotate
-    shadow-intensity="1"
-    style="width:100vw; height:100vh;">
-  </model-viewer>
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="module"
+      src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js">
+    </script>
+  </head>
+  <body style="margin:0">
+    <model-viewer
+      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+      ar
+      ar-modes="scene-viewer"
+      camera-controls
+      style="width:100vw; height:100vh;">
+    </model-viewer>
+  </body>
 </html>
