--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body style="margin:0">
-  <model-viewer
+  <model-viewer 
     src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    ar
-    ar-modes="scene-viewer webxr quick-look"
-    camera-controls
+    ar 
+    ar-modes="webxr scene-viewer quick-look" 
+    camera-controls 
+    touch-action="pan-y"
+    ar-placement="floor"
+    alt="A 3D model of an astronaut"
     style="width:100vw; height:100vh;">
+    
+    <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; padding: 10px;">
+      👋 ARで表示
+    </button>
   </model-viewer>
 </body>
 </html>
