--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin:0">
   <model-viewer 
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    src="dance.glb"
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
