--- a/index.html
+++ b/index.html
@@ -3,75 +3,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ナカムロボ AR Viewer</title>
+  <title>ナカムロボ 巨大化計画</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   <style>
     :root { --primary-color: #4285f4; }
-    body { 
-      margin: 0; 
-      background-color: #ffffff; 
-      font-family: 'Helvetica Neue', Arial, sans-serif;
-      overflow: hidden; 
-    }
+    body { margin: 0; background-color: #ffffff; font-family: sans-serif; overflow: hidden; }
+    model-viewer { width: 100vw; height: 70vh; background-color: #f8f9fa; }
 
-    /* 上部：3Dプレビューエリア */
-    model-viewer { 
-      width: 100vw; 
-      height: 70vh; 
-      background-color: #f8f9fa;
-      --poster-color: transparent;
-    }
-
-    /* 下部：操作エリア */
     .controls {
-      width: 100vw;
-      height: 30vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: white;
-      box-shadow: 0 -5px 15px rgba(0,0,0,0.05);
-      z-index: 10;
+      width: 100vw; height: 30vh; display: flex; flex-direction: column;
+      align-items: center; justify-content: center; background: white;
+      box-shadow: 0 -5px 15px rgba(0,0,0,0.05); z-index: 10;
     }
 
-    /* AR起動ボタンを巨大化・強調 */
     #ar-button {
       background-image: url(https://modelviewer.dev/assets/ic_view_in_ar_new_googblue_48dp.png);
-      background-repeat: no-repeat;
-      background-size: 28px 28px;
-      background-position: 24px 50%;
-      background-color: var(--primary-color);
-      color: white;
-      width: 85%; /* 横幅を広げて押しやすく */
-      height: 75px; /* 高さを出して存在感をアップ */
-      line-height: 75px;
-      padding: 0 24px 0 60px;
-      font-size: 20px;
-      font-weight: bold;
-      border-radius: 40px;
-      border: none;
-      box-shadow: 0 6px 20px rgba(66, 133, 244, 0.4);
-      cursor: pointer;
-      transition: transform 0.1s, background-color 0.2s;
-    }
-    #ar-button:active { 
-      transform: scale(0.96); 
-      background-color: #3367d6;
-    }
-
-    /* 読み込みバー */
-    .progress-bar {
-      display: block; width: 50%; height: 4px;
-      position: absolute; left: 50%; top: 35%; transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.1); border-radius: 2px;
-    }
-    .update-bar {
-      background-color: var(--primary-color); width: 0%; height: 100%;
-      border-radius: 2px; transition: width 0.3s;
+      background-repeat: no-repeat; background-size: 28px 28px; background-position: 24px 50%;
+      background-color: var(--primary-color); color: white;
+      width: 85%; height: 75px; line-height: 75px; padding: 0 24px 0 60px;
+      font-size: 20px; font-weight: bold; border-radius: 40px; border: none;
+      box-shadow: 0 6px 20px rgba(66, 133, 244, 0.4); cursor: pointer;
     }
     
-    p { margin-top: 15px; color: #666; font-size: 14px; }
+    .progress-bar {
+      display: block; width: 50%; height: 4px; position: absolute;
+      left: 50%; top: 35%; transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.1); border-radius: 2px;
+    }
+    .update-bar { background-color: var(--primary-color); width: 0%; height: 100%; transition: width 0.3s; }
+    p { margin-top: 15px; color: #666; font-size: 14px; text-align: center; }
   </style>
 </head>
 <body>
@@ -81,13 +41,12 @@
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
-    ar-scale="auto"
+    ar-scale="auto" 
+    scale="3 3 3" 
     interaction-prompt="auto"
     shadow-intensity="1" 
     environment-image="neutral" 
-    exposure="1"
     ar-placement="floor"
-    scale="1 1 1"
     touch-action="pan-y">
     
     <div class="progress-bar" slot="progress-bar">
@@ -96,26 +55,19 @@
   </model-viewer>
 
   <div class="controls">
-    <button id="ar-button" onclick="activateAR()">
+    <button id="ar-button" onclick="document.querySelector('model-viewer').activateAR()">
       ナカムロボをAR召喚
     </button>
-    <p>指で広げるとロボを大きくできます</p>
+    <p>床を認識させた後、<br>二本指で広げるとさらに巨大化します</p>
   </div>
 
   <script>
     const modelViewer = document.querySelector('model-viewer');
-    function activateAR() {
-      modelViewer.activateAR();
-    }
-
-    // ロード進捗管理
     modelViewer.addEventListener('progress', (event) => {
       const progressBar = document.querySelector('.update-bar');
       progressBar.style.width = `${event.detail.totalProgress * 100}%`;
       if (event.detail.totalProgress === 1) {
-        setTimeout(() => {
-          document.querySelector('.progress-bar').style.display = 'none';
-        }, 300);
+        setTimeout(() => { document.querySelector('.progress-bar').style.display = 'none'; }, 300);
       }
     });
   </script>
