--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ナカムロボ 巨大化計画</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title>ナカムロボ AR 操作完全版</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   <style>
     :root { --primary-color: #4285f4; }
     body { margin: 0; background-color: #ffffff; font-family: sans-serif; overflow: hidden; }
-    model-viewer { width: 100vw; height: 70vh; background-color: #f8f9fa; }
+    
+    model-viewer { 
+      width: 100vw; 
+      height: 70vh; 
+      background-color: #f8f9fa;
+      /* 指の操作をブラウザに奪われないための設定 */
+      touch-action: none; 
+    }
 
     .controls {
       width: 100vw; height: 30vh; display: flex; flex-direction: column;
@@ -43,11 +50,14 @@
     camera-controls 
     ar-scale="auto" 
     scale="3 3 3" 
-    interaction-prompt="auto"
     shadow-intensity="1" 
     environment-image="neutral" 
     ar-placement="floor"
-    touch-action="pan-y">
+    interaction-prompt="auto"
+    /* 指での操作を強制許可する属性 */
+    enable-pan
+    interaction-attributes="all"
+    touch-action="none">
     
     <div class="progress-bar" slot="progress-bar">
       <div class="update-bar"></div>
@@ -58,7 +68,7 @@
     <button id="ar-button" onclick="document.querySelector('model-viewer').activateAR()">
       ナカムロボをAR召喚
     </button>
-    <p>床を認識させた後、<br>二本指で広げるとさらに巨大化します</p>
+    <p>指1本で回転、指2本で移動・拡大ができます</p>
   </div>
 
   <script>
