--- a/index.html
+++ b/index.html
@@ -3,36 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>ナカムロボ AR Pro (Android 16対応版)</title>
+  <title>ナカムロボ AR (WebXR Forced)</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   <style>
     :root { --primary-color: #4285f4; }
     body { margin: 0; background-color: #ffffff; font-family: sans-serif; overflow: hidden; }
-    
-    model-viewer { 
-      width: 100vw; 
-      height: 70vh; 
-      background-color: #f8f9fa;
-      touch-action: none;
-    }
-
-    .controls {
-      width: 100vw; height: 30vh; display: flex; flex-direction: column;
-      align-items: center; justify-content: center; background: white;
-      box-shadow: 0 -5px 15px rgba(0,0,0,0.05); z-index: 10;
-    }
-
+    model-viewer { width: 100vw; height: 70vh; background-color: #f8f9fa; touch-action: none; }
+    .controls { width: 100vw; height: 30vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: white; box-shadow: 0 -5px 15px rgba(0,0,0,0.05); }
     #ar-button {
       background-image: url(https://modelviewer.dev/assets/ic_view_in_ar_new_googblue_48dp.png);
-      background-repeat: no-repeat; background-size: 28px 28px; background-position: 24px 50%;
+      background-repeat: no-repeat; background-size: 24px 24px; background-position: 20px 50%;
       background-color: var(--primary-color); color: white;
-      width: 85%; height: 75px; line-height: 75px; padding: 0 24px 0 60px;
-      font-size: 20px; font-weight: bold; border-radius: 40px; border: none;
-      box-shadow: 0 6px 20px rgba(66, 133, 244, 0.4); cursor: pointer;
+      width: 85%; height: 70px; line-height: 70px; padding: 0 20px 0 55px;
+      font-size: 18px; font-weight: bold; border-radius: 35px; border: none; cursor: pointer;
     }
-    #ar-button:active { transform: scale(0.96); }
-
-    .instruction { margin-top: 15px; color: #666; font-size: 13px; text-align: center; line-height: 1.5; padding: 0 20px; }
+    .instruction { margin-top: 15px; color: #666; font-size: 12px; text-align: center; padding: 0 10px; }
   </style>
 </head>
 <body>
@@ -42,35 +27,27 @@
     src="dance.glb" 
     ios-src="dance.usdz"
     ar 
-    ar-modes="scene-viewer webxr quick-look" 
+    /* 修正ポイント：webxrのみを指定し、バグっているScene Viewerを呼ばないようにする */
+    ar-modes="webxr quick-look" 
     camera-controls 
     ar-scale="auto" 
     scale="1 1 1" 
-    shadow-intensity="1" 
+    shadow-intensity="1.5" 
     environment-image="neutral" 
     ar-placement="floor"
-    interaction-prompt="auto">
-    
-    <div slot="progress-bar" style="width: 100%; height: 4px; background: rgba(0,0,0,0.1);">
-      <div id="update-bar" style="width: 0%; height: 100%; background: var(--primary-color);"></div>
-    </div>
+    interaction-prompt="auto"
+    enable-pan>
   </model-viewer>
 
   <div class="controls">
     <button id="ar-button" onclick="document.querySelector('#ar-viewer').activateAR()">
-      ナカムロボを召喚する
+      ARを起動する
     </button>
     <div class="instruction">
-      Android 16 の方は、起動後にスマホを<br>
-      「8の字」に動かして床をスキャンしてください。
+      Android 16対策：ブラウザ直接モード(WebXR)で起動します。<br>
+      起動後、そのまま動かさず床を認識させてください。
     </div>
   </div>
 
-  <script>
-    const mv = document.querySelector('#ar-viewer');
-    mv.addEventListener('progress', (event) => {
-      document.querySelector('#update-bar').style.width = `${event.detail.totalProgress * 100}%`;
-    });
-  </script>
 </body>
 </html>
