--- a/index.html
+++ b/index.html
@@ -2,71 +2,58 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ナカムロボ AR 最終調整</title>
+  <title>ナカムロボ AR Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     :root { --primary-color: #00ffcc; }
     body { margin: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; height: 100vh; }
     .wrap { display: flex; flex-direction: column; height: 100%; }
     
-    /* モデルを大きく表示 */
-    model-viewer {
-      width: 100%;
-      height: 70vh;
-      background: #000;
-      /* ブラウザにジェスチャーを奪わせない */
+    /* モデルを大きく表示（画面の70%） */
+    model-viewer { 
+      width: 100%; height: 70vh; background: #000; 
+      /* 操作を奪われないためのおまじない */
       touch-action: none; 
     }
 
     .controls {
-      height: 30vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-      border-top: 1px solid #333;
+      height: 30vh; display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      background: #111; border-top: 1px solid #333;
     }
 
+    /* 押しやすい巨大ボタン */
     button {
-      width: 85%;
-      height: 75px;
-      font-size: 20px;
-      font-weight: bold;
-      border: none;
-      border-radius: 40px;
-      background: var(--primary-color);
-      color: #000;
-      box-shadow: 0 4px 20px rgba(0, 255, 204, 0.4);
+      width: 85%; height: 80px; font-size: 22px; font-weight: bold;
+      border: none; border-radius: 40px; background: var(--primary-color);
+      color: #000; box-shadow: 0 4px 20px rgba(0, 255, 204, 0.4); cursor: pointer;
     }
+    button:active { transform: scale(0.96); }
+    .note { margin-top: 15px; font-size: 13px; opacity: 0.8; text-align: center; line-height: 1.5; }
   </style>
 </head>
 <body>
   <div class="wrap">
     <model-viewer
       id="mv"
-      /* 絶対パスを維持 */
+      /* 確実に動くパスを使用 */
       src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
       ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
       ar
-      /* WebXRの操作性を極限まで高める設定 */
-      ar-modes="webxr quick-look"
+      /* 【重要】動かせていた時と同じ設定に戻しつつ、webxrの順番を調整 */
+      ar-modes="scene-viewer quick-look webxr"
       camera-controls
-      enable-pan
-      ar-scale="auto"
-      interaction-prompt="auto"
-      shadow-intensity="1.5"
-      environment-image="neutral"
-      autoplay>
+      autoplay
+      shadow-intensity="1">
     </model-viewer>
 
     <div class="controls">
-      <button onclick="document.getElementById('mv').activateAR()">ARでナカムロボ召喚</button>
-      <div style="margin-top:15px; font-size:12px; opacity:0.7; text-align:center;">
-        【Android 16の方へ】<br>
-        起動後、スマホを大きく左右に振って床を認識させると、<br>
-        2本指で移動・拡大ができるようになります。
+      <button onclick="document.getElementById('mv').activateAR()">ARで召喚する</button>
+      <div class="note">
+        【操作のコツ：影が出た後】<br>
+        1. ロボットを動かそうとする前に、スマホを左右にゆっくり動かす<br>
+        2. **2本指**でロボットをつまんで動かすと反応しやすいです
       </div>
     </div>
   </div>
