--- a/index.html
+++ b/index.html
@@ -2,85 +2,51 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ナカムロボ AR Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>ナカムロボ AR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
     html, body {
       margin: 0; padding: 0; background: #000; color: #fff;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      height: 100%; overflow: hidden; /* スクロールを禁止 */
+      font-family: sans-serif; height: 100%; overflow: hidden;
     }
-
     .wrap {
       display: flex; flex-direction: column; height: 100%;
     }
-
-    /* モデル表示：画面の約65%に抑えてボタンを押しやすく */
     model-viewer {
-      width: 100%;
-      height: 65vh;
-      background: #000;
+      width: 100%; height: 70vh; background: #000;
     }
-
-    /* 下部：ボタンエリア（35%確保してスクロール不要に） */
     .controls {
       display: flex; flex-direction: column; align-items: center; justify-content: center;
-      height: 35vh; background: #111; border-top: 1px solid #333;
+      height: 30vh; background: #111; border-top: 1px solid #333;
     }
-
-    /* 召喚ボタン：とにかく巨大、片手で押せるサイズ */
-    #ar-button {
-      width: 90%;
-      height: 90px; /* 以前よりさらに大きく */
-      font-size: 22px;
-      font-weight: bold;
-      border: none;
-      border-radius: 45px;
-      background: #00ffcc;
-      color: #000;
-      box-shadow: 0 4px 25px rgba(0, 255, 204, 0.4);
-      cursor: pointer;
+    button {
+      width: 85%; height: 80px; font-size: 22px; font-weight: bold;
+      border: none; border-radius: 40px; background: #00ffcc; color: #000;
+      box-shadow: 0 4px 20px rgba(0, 255, 204, 0.4);
     }
-    #ar-button:active { transform: scale(0.95); }
-
-    .note { margin-top: 15px; font-size: 13px; opacity: 0.7; text-align: center; line-height: 1.5; }
+    .note { margin-top: 15px; font-size: 13px; opacity: 0.8; }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <model-viewer
       id="mv"
       src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
-      ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
       ar
-      ar-modes="quick-look scene-viewer webxr"
+      /* Android 16で最もカメラ起動が安定する順序に固定 */
+      ar-modes="scene-viewer webxr"
       camera-controls
       autoplay
-      exposure="1"
-      scale="0.8 0.8 0.8">
+      exposure="1">
     </model-viewer>
 
     <div class="controls">
-      <button id="ar-button" onclick="startAR()">ナカムロボをAR召喚</button>
-      <div class="note">
-        指1本で回転、2本指で移動・拡大<br>
-        ※戻される場合はChromeの全タブを閉じてください
-      </div>
+      <button onclick="document.getElementById('mv').activateAR()">AR召喚</button>
+      <div class="note">起動後、床を認識するまでスマホを動かしてください</div>
     </div>
   </div>
-
-  <script>
-    // index_qr.html と同じ起動ロジック
-    function startAR() {
-      const mv = document.getElementById('mv');
-      if (mv) {
-        mv.activateAR();
-      }
-    }
-  </script>
 </body>
 </html>
